Add GitHub OAuth sign in
