# internal/api/auth/model.go
@@ -63,3 +63,8 @@ type googleIDTokenClaims struct {
 	Sub   string `json:"sub"`
 	Email string `json:"email"`
 }
+
+// GitHubOAuthRequest represents GitHub OAuth request
+type GitHubOAuthRequest struct {
+	Code string `json:"code" validate:"required"`
+}
